# pyvex

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  BUILDING.md  CMakeLists.txt  MANIFEST.in  README.md  generate_deepcopy.sh  generate_enums.py  make_ffi.py  pyproject.toml  pyvex.py  reqs.txt  requirements.txt  setup.cfg  setup.py  test.py  valgrind_static_3.8.1.patch  vex.cffi  vex.orig  vex_include  vex_lib  vexradare.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  cifuzz.yml  custom.yml  macos.yml  smoketest.yml  wasm.yml  windows.yml
docs/: conf.py  index.rst
fuzzing/: build.sh  enhanced_fdp.py  irsb_fuzzer.py
patches/: arm_conditional_jk.patch  ppc_conditions.patch  ubuntu_libc.patch  unconditional_blr.patch  valgrind_static_3.9.0.patch
pygrind/: Makefile.am  pg_main.c
pygrind/tests/: Makefile  Makefile.in
pyvex/: __init__.py  _register_info.py  _subregister_map.py  _version.py  arches.py  block.py  const.py  const_val.py  data_ref.py  e4c_lite.c  e4c_lite.h  endianness.py  enum_macros.h  enums.py  errors.py  expr.py  generated_enums  jumpkinds.py  native.py  pymare.h  pyvex.c  pyvex_deepcopy.c  pyvex_deepcopy.h  pyvex_enums.c  pyvex_enums.h  pyvex_export.h  pyvex_ircallee.c  pyvex_irconst.c  pyvex_irexpr.c  pyvex_irregarray.c  pyvex_irsb.c  pyvex_irstmt.c  pyvex_irtypeenv.c  pyvex_logging.c  pyvex_logging.h  pyvex_macros.h  pyvex_static.c  pyvex_static.h  pyvex_types.h  stmt.py  (+3 more)
pyvex/IRConst/: __init__.py
pyvex/IRExpr/: __init__.py
pyvex/IRStmt/: __init__.py
pyvex/lift/: __init__.py  fixes.py  libvex.py  lifter.py  zerodivision.py
pyvex/lift/libvex/: __init__.py  enums.py  fixes.py  libvex.py
pyvex/lift/libvex/include/: libvex.h  libvex_basictypes.h  libvex_guest_mips32.h  libvex_guest_mips64.h  libvex_guest_offsets.h  libvex_guest_x86.h  libvex_ir.h
pyvex/lift/util/: __init__.py  instr_helper.py  lifter_helper.py  syntax_wrapper.py  vex_helper.py
pyvex/lifting/: __init__.py  fixes.py  libvex.py  lift.py  lift_function.py  lifter.py  post_processor.py  zerodivision.py
pyvex/lifting/gym/: README.md  __init__.py  aarch64_spotter.py  arm_spotter.py  x86_spotter.py
pyvex/lifting/util/: __init__.py  halfrep.py  instr_helper.py  irsb_postprocess.py  lifter_helper.py  syntax_wrapper.py  vex_helper.py
pyvex_c/: Makefile  Makefile-msvc  Makefile-win  README  analysis.c  arches.cpp  arches.hpp  block.cpp  block.hpp  const.cpp  const.hpp  enums.cpp  enums.hpp  expr.cpp  expr.hpp  generated_enums  libvex.h  libvex_ir.h  lift_multi_utils.c  lift_multi_utils.h  logging.c  logging.h  module.cpp  postprocess.c  pyvex.c  pyvex.def  pyvex.h  pyvex_enums.h  pyvex_export.h  pyvex_internal.h  pyvex_ircallee.c  pyvex_irconst.c  pyvex_irexpr.c  pyvex_irregarray.c  pyvex_irsb.c  pyvex_irstmt.c  pyvex_irtypeenv.c  pyvex_logging.c  pyvex_logging.h  pyvex_static.c  (+6 more)
tests/: test.py  test_arm_postprocess.py  test_data_refs_64bit_target.py  test_gym.py  test_gymrat_ieee.py  test_irsb_property_caching.py  test_lift.py  test_mips32_postprocess.py  test_pyvex.py  test_riscv64.py  test_ro_region_const_fold_amd64.py  test_s390x_exrl.py  test_s390x_lochi.py  test_s390x_vl.py  test_spotter.py  test_ud2.py
tools/: generate_enums.py
