[build-system]
requires = ["setuptools>=59", "wheel", "cffi >= 1.0.3"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py38']
force-exclude = '''
/(
  vex
)/
'''

[tool.ruff]
line-length = 130 # A bit longer than black to catch egregious cases
extend-ignore = [
	"E402", # Bottom-file imports
]

[tool.ruff.per-file-ignores]
"pyvex/__init__.py" = [
	"F401", # Need to define __all__ at the bottom
	"F403", # Need to replace * imports with explicit imports
]
