[build-system]
requires = ["scikit-build-core >= 0.11.4", "cffi >= 1.0.3;implementation_name == 'cpython'"]
build-backend = "scikit_build_core.build"

[project]
name = "pyvex"
description = "A Python interface to libVEX and VEX IR"
license = "BSD-2-Clause AND GPL-2.0-only"
license-files = [
  "LICENSE",
  "pyvex_c/LICENSE",
  "vex/LICENSE.README",
  "vex/LICENSE.GPL",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "bitstring",
    "cffi>=1.0.3;implementation_name == 'cpython'",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://api.angr.io/projects/pyvex/en/latest/"
Repository = "https://github.com/angr/pyvex"

[project.optional-dependencies]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autodoc-typehints",
]
fuzzing = [
    "atheris>=2.3.0",
]
testing = [
    "pytest",
    "pytest-xdist",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.scikit-build]
build-dir = "scikit_build"
wheel.py-api = "py3"

[tool.scikit-build.sdist]
include = [
  "pyvex/py.typed",
  "pyvex/include/*",
]
exclude = [
  "tests*"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "pyvex/__init__.py"

[tool.black]
line-length = 120
target-version = ['py310']
force-exclude = '''
/(
  vex
)/
'''

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "TID",
]
