[metadata]
name = pyvex
version = attr: pyvex.__version__
url = https://github.com/angr/pyvex
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = Mixed
license_files =
    LICENSE
    pyvex_c/LICENSE
description = A Python interface to libVEX and VEX IR
long_description = file: README.md

[options]
python_requires = >= 3.6
setup_requires =
    cffi >= 1.0.3; implementation_name == 'cpython'
    pycparser
install_requires =
    archinfo == 9.2.0.dev0
    bitstring
    cffi >= 1.0.3; implementation_name == 'cpython'
    future
    pycparser
include_package_data = True
packages = find:

[options.package_data]
pyvex =
    lib/*
    include/*
    py.typed
