[metadata]
name = pyvex
version = attr: pyvex.__version__
url = https://github.com/angr/pyvex
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = Mixed
license_files =
    LICENSE
    pyvex_c/LICENSE
description = A Python interface to libVEX and VEX IR
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
install_requires =
    archinfo == 9.2.3
    bitstring
    cffi >= 1.0.3; implementation_name == 'cpython'
include_package_data = True
packages = find:

[options.package_data]
pyvex =
    lib/*
    include/*
    py.typed
