[metadata]
name = pyvex
version = attr: pyvex.__version__
description = A Python interface to libVEX and VEX IR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/pyvex
license = BSD-2-Clause
license_files =
    LICENSE
    pyvex_c/LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    archinfo==9.2.61.dev0
    bitstring
    cffi>=1.0.3;implementation_name == 'cpython'
python_requires = >=3.8
include_package_data = True

[options.extras_require]
docs =
    furo
    myst-parser
    sphinx
    sphinx-autodoc-typehints

[options.package_data]
pyvex =
    lib/*
    include/*
    py.typed
